--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* acessa o elemento root e cria variaveis globais */
 :root {
 --primaria: #915f32;
 --secundaria: #ce9056;
@@ -6,28 +7,52 @@
 --preto: black;
 }
 
+/* acessa todos os elementoss
+remove todas as margens
+remove todos os paddins
+calcula automaticamente as larguras considerando: conteudo, bordas, margens e paddings */
 * {
 margin: 0;
 padding: 0;
 box-sizing: border-box;
 }
 
+/* seleciona o headder 
+coloca a cor de fundo
+e um  espacamento interno */
 header {
 background-color: var(--primaria);
 padding: 1rem;
 }
 
+/* seleciona o nav
+coloca cor de fundo
+muda o display para gid
+cria uma grade em 5 colunas de largura igual
+alinha o texto no centro da coluna
+espacamento interno
+espaço entre as colunas e linhas do grid */
 nav {
 background-color: var(--secundaria);
 display: grid;
 grid-template-columns: repeat(5, 1fr);
 text-align: center;
+padding: 0.25rem;
+gap: 0.5rem;
 }
 
+/* seleciona todos os links dentro de navs
+remove a decoração dos links
+muda a cor da letra
+e a exibição do ponteiro do mouse para uma mão
+ */
 nav a {
     text-decoration: none;
+    color: var(--preto);
+    cursor: pointer;
 }
 
+/*  */
 .logo-busca {
     display: flex;
     justify-content: space-between;
