--- a/views/quem_somos.html
+++ b/views/quem_somos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estante Web</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -20,18 +20,18 @@
     </header>
 
     <nav>
-        <a href="views/index.html">Inicio</a>
-        <a href="views/quem_somos.html">Quem Somos</a>
-        <a href="views/contato.html">Contato</a>
-        <a href="views/favoritos.html" class="alinhar">
-            <img src="img/star.png" alt="" width="30px" height="30px">
+        <a href="../index.html">Inicio</a>
+        <a href="quem_somos.html">Quem Somos</a>
+        <a href="contato.html">Contato</a>
+        <a href="favoritos.html" class="alinhar">
+            <img src="../img/star.png" alt="" width="30px" height="30px">
             Favoritos
         </a>
-        <a href="views/login.html">Login</a>
+        <a href="login.html">Login</a>
     </nav>
 
-    <main id="index">
-
+    <main>
+    QUEM SOMOS
     </main>
 
     <footer>
