--- a/views/contato.html
+++ b/views/contato.html
@@ -30,8 +30,10 @@
         <a href="login.html">Login</a>
     </nav>
 
-    <main>
-   CONTATOS
+    <main id="contat_M">
+   <div> <img src="../img/instagram.svg" alt="" width="30px" height="30px">   @estante_web</div>
+   <div> <img src="../img/facebook.svg" alt="" width="30px" height="30px">   @estante_web</div>
+   <div><img src="../img/tel.svg" alt=""width="30px" height="30px">    (98) 3200-0032</div>
     </main>
 
     <footer>
@@ -42,8 +44,8 @@
         <div> Todos os direitos reservados</div>
 
         <div class="img-fim">
-            <img src="img/facebook.svg" alt="" width="30px" height="30px">
-            <img src="img/instagram.svg" alt="" width="30px" height="30px">
+            <img src="../img/facebook.svg" alt="" width="30px" height="30px">
+            <img src="../img/instagram.svg" alt="" width="30px" height="30px">
         </div>
 
     </footer>
