--- a/views/favoritos.html
+++ b/views/favoritos.html
@@ -42,8 +42,8 @@
         <div> Todos os direitos reservados</div>
 
         <div class="img-fim">
-            <img src="img/facebook.svg" alt="" width="30px" height="30px">
-            <img src="img/instagram.svg" alt="" width="30px" height="30px">
+            <img src="../img/facebook.svg" alt="" width="30px" height="30px">
+            <img src="../img/instagram.svg" alt="" width="30px" height="30px">
         </div>
 
     </footer>
