--- a/views/quem_somos.html
+++ b/views/quem_somos.html
@@ -31,7 +31,18 @@
     </nav>
 
     <main>
-    QUEM SOMOS
+        <div>
+            <h1 id="centro">Que somos</h1>
+        </div>
+
+        <div>
+            <p id="meio">Olá caros amigos, é um prazer enorme ter vocês conosco. Nesse momento queremos apresentar esse
+                projeto que está sendo desenvolvido pelos alunos da turma 52 do Curso de Programador Web Noturno no
+                Senac do ano de 2024 com a supervisão do Professor Luis Fellipe.</p>
+        </div>
+        <div id="dp">
+            Desenvolvido por Equipe noite
+        </div>
     </main>
 
     <footer>
@@ -42,8 +53,8 @@
         <div> Todos os direitos reservados</div>
 
         <div class="img-fim">
-            <img src="img/facebook.svg" alt="" width="30px" height="30px">
-            <img src="img/instagram.svg" alt="" width="30px" height="30px">
+            <img src="../img/facebook.svg" alt="" width="30px" height="30px">
+            <img src="../img/instagram.svg" alt="" width="30px" height="30px">
         </div>
 
     </footer>
