--- a/views/contato.html
+++ b/views/contato.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+    
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estante Web</title>
     <link rel="stylesheet" href="../css/style.css">
+    
 </head>
 
 <body>
@@ -30,25 +32,12 @@
         <a href="login.html">Login</a>
     </nav>
 
-    <main id="contat_M">
-   <div> <img src="../img/instagram.svg" alt="" width="30px" height="30px">   @estante_web</div>
-   <div> <img src="../img/facebook.svg" alt="" width="30px" height="30px">   @estante_web</div>
-   <div><img src="../img/tel.svg" alt=""width="30px" height="30px">    (98) 3200-0032</div>
+    <main id="contato">
+   <div> <img src="../img/instagram.svg" alt="" width="70px" height="70px">   @estante_web</div>
+   <div> <img src="../img/facebook.svg" alt="" width="70px" height="70px">   @estante_web</div>
+   <div><img src="../img/tel.svg" alt=""width="70px" height="70px">    (98) 3200-0032</div>
     </main>
-
-    <footer>
-        <div id="copy">
-            &copy; Estante Web
-        </div>
-
-        <div> Todos os direitos reservados</div>
-
-        <div class="img-fim">
-            <img src="../img/facebook.svg" alt="" width="30px" height="30px">
-            <img src="../img/instagram.svg" alt="" width="30px" height="30px">
-        </div>
-
-    </footer>
+    
 </body>
 
 </html>
