--- a/views/login.html
+++ b/views/login.html
@@ -31,22 +31,32 @@
     </nav>
 
     <main>
-   LOGIN
+   <div id="cor"> 
+    
+    <h2>acesse sua conta</h2>
+
+    <form action="" method="post">
+<label for="email">E-MAIL:</label>
+        <input type="email" name="email" id="email" >
+        <label for="senha">SENHA:</label>
+        <input type="password" name="senha" id="senha">
+
+        <button id="botao_entrar" type="submit">ENTRAR</button>
+        
+        
+</form>
+<p>
+    esqueceu sua senha?
+    </p>
+
+</div>
+<div class="crie_sua_conta"> <p>Ainda não é cadastrado?
+    </p>
+    <p>Crie sua conta</p>
+</div>
     </main>
 
-    <footer>
-        <div id="copy">
-            &copy; Estante Web
-        </div>
-
-        <div> Todos os direitos reservados</div>
-
-        <div class="img-fim">
-            <img src="../img/facebook.svg" alt="" width="30px" height="30px">
-            <img src="../img/instagram.svg" alt="" width="30px" height="30px">
-        </div>
-
-    </footer>
+   
 </body>
 
 </html>
