--- a/css/style.css
+++ b/css/style.css
@@ -148,3 +148,39 @@ flex-direction: column;
     font-size: 500%;
     line-height: 2; /* Ajuste conforme necessário */
 }
+
+#cor { 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    text-align: start;
+    background-color: var(--secundaria);
+   margin: 13rem 45rem;
+   padding: 30px;
+    border-radius: 5px;
+    width: 300px;
+    font-size: 125%;
+    gap: 15px;
+}
+button { 
+
+    background-color: var(--primaria);
+    color: var(--branco);
+    align-items: center;
+    text-align: center;
+}
+
+h2 {  
+
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.crie_sua_conta { 
+
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    }
+
