--- a/views/favoritos.html
+++ b/views/favoritos.html
@@ -30,8 +30,21 @@
         <a href="login.html">Login</a>
     </nav>
 
-    <main>
-   FAVORITOS
+    <main id="ladolado">
+   <div class="fav_e">
+    <P class="cor_p">Livros Educativos</P>
+    <p class="cor_p">Livro Religioso</p>
+    <p class="cor_p">Romances</p>
+    <P class="cor_p">Infantil</P>
+</div>
+
+
+   <div class="fav_d">
+<h3>A cabana</h3>
+<h3>A travesia</h3>
+<h3>Eva</h3>
+
+   </div>
     </main>
 
     <footer>
