--- a/views/favoritos.html
+++ b/views/favoritos.html
@@ -24,27 +24,34 @@
         <a href="quem_somos.html">Quem Somos</a>
         <a href="contato.html">Contato</a>
         <a href="favoritos.html" class="alinhar">
-            <img src="../img/star.png" alt="" width="30px" height="30px">
-            Favoritos
-        </a>
+<img src="../img/star.png" alt="" width="30px" height="30px">
+Favoritos</a>
+
         <a href="login.html">Login</a>
     </nav>
 
-    <main id="ladolado">
-   <div class="fav_e">
-    <P class="cor_p">Livros Educativos</P>
-    <p class="cor_p">Livro Religioso</p>
-    <p class="cor_p">Romances</p>
-    <P class="cor_p">Infantil</P>
+    <main>
+
+<div> 
+    <H2 id="favoritos"> Favoritos <img src="../img/favo.png " alt="" width="30px"  height="30px"></H2>
+</div>
+
+<div id="fav-livros"> 
+
+ <DIV class="livros-fav"> <img   src="../img/cabana.jpg" alt=""  width="300px"  height="300px"> <p class="tam"> A Cabana</p>  <img src="../img/favo.png" alt=""   width="30px"  height="30px">  </DIV>
+ <DIV class="livros-fav"><img src="../img/travesia.jpg" alt="" width="300px"  height="300px"> <p class="tam"> A Travesia</p>  <img src="../img/favo.png" alt=""   width="30px"  height="30px"> </DIV>
+    <DIV class="livros-fav"><img src="../img/eva.jpg" alt="" width="300px"  height="300px"> <p class="tam"> Eva</p>  <img src="../img/favo.png" alt=""   width="30px"  height="30px"> </DIV>
+
+
+
+
+
 </div>
 
 
-   <div class="fav_d">
-<h3>A cabana</h3>
-<h3>A travesia</h3>
-<h3>Eva</h3>
 
-   </div>
+
+   
     </main>
 
     <footer>
