--- a/views/login.html
+++ b/views/login.html
@@ -45,14 +45,14 @@
         
         
 </form>
-<p>
-    esqueceu sua senha?
-    </p>
+<a href="">esqueceu sua senha?</a>
+    
+    
 
 </div>
 <div class="crie_sua_conta"> <p>Ainda não é cadastrado?
     </p>
-    <p>Crie sua conta</p>
+    <a href="">Crie sua conta</a>
 </div>
     </main>
 
