--- a/views/favoritos.html
+++ b/views/favoritos.html
@@ -24,34 +24,60 @@
         <a href="quem_somos.html">Quem Somos</a>
         <a href="contato.html">Contato</a>
         <a href="favoritos.html" class="alinhar">
-<img src="../img/star.png" alt="" width="30px" height="30px">
-Favoritos</a>
+            <img src="../img/star.png" alt="" width="30px" height="30px">
+            Favoritos</a>
 
         <a href="login.html">Login</a>
     </nav>
 
-    <main>
+    <main class="login-centro">
 
-<div> 
-    <H2 id="favoritos"> Favoritos <img src="../img/favo.png " alt="" width="30px"  height="30px"></H2>
-</div>
+        <div>
+            <H2 id="favoritos" class="tam"> Favoritos <img src="../img/favo.png " alt="" width="30px" height="30px">
+            </H2>
+        </div>
+        <DIv id="LADO">
+            <div id="categorias">
+                <div class="cor-cat">
+                    <P >LIVROS EDUCATIVOS</P>
+                </div>
+                <div class="cor-cat">
+                    <P >LIVROS RELIGIOSOS</P>
+                </div>
+                <div class="cor-cat">
+                    <P >ROMANCE </P>
+                </div>
+                <div  class="cor-cat">
+                    <P> INFANTIL</P>
+                </div >
 
-<div id="fav-livros"> 
 
- <DIV class="livros-fav"> <img   src="../img/cabana.jpg" alt=""  width="300px"  height="300px"> <p class="tam"> A Cabana</p>  <img src="../img/favo.png" alt=""   width="30px"  height="30px">  </DIV>
- <DIV class="livros-fav"><img src="../img/travesia.jpg" alt="" width="300px"  height="300px"> <p class="tam"> A Travesia</p>  <img src="../img/favo.png" alt=""   width="30px"  height="30px"> </DIV>
-    <DIV class="livros-fav"><img src="../img/eva.jpg" alt="" width="300px"  height="300px"> <p class="tam"> Eva</p>  <img src="../img/favo.png" alt=""   width="30px"  height="30px"> </DIV>
+            </div>
 
 
 
+            <div id="fav-livros">
+
+                <DIV class="livros-fav"> <img src="../img/cabana.jpg" alt="" width="300px" height="300px">
+                    <p class="tam"> A Cabana</p> <img src="../img/favo.png" alt="" width="30px" height="30px">
+                </DIV>
+                <DIV class="livros-fav"><img src="../img/travesia.jpg" alt="" width="300px" height="300px">
+                    <p class="tam"> A Travesia</p> <img src="../img/favo.png" alt="" width="30px" height="30px">
+                </DIV>
+                <DIV class="livros-fav"><img src="../img/eva.jpg" alt="" width="300px" height="300px">
+                    <p class="tam"> Eva</p> <img src="../img/favo.png" alt="" width="30px" height="30px">
+                </DIV>
 
 
-</div>
 
 
 
+            </div>
 
-   
+
+        </DIv>
+
+
     </main>
 
     <footer>
