--- a/views/contato.html
+++ b/views/contato.html
@@ -33,9 +33,9 @@
     </nav>
 
     <main id="contato">
-   <div> <img src="../img/instagram.svg" alt="" width="70px" height="70px">   @estante_web</div>
-   <div> <img src="../img/facebook.svg" alt="" width="70px" height="70px">   @estante_web</div>
-   <div><img src="../img/tel.svg" alt=""width="70px" height="70px">    (98) 3200-0032</div>
+   <div> <img  class="cor" src="../img/instagram.svg" alt="" width="70px" height="70px">   @estante_web</div>
+   <div> <img  class="cor" src="../img/facebook.svg" alt="" width="70px" height="70px">   @estante_web</div>
+   <div> <img class="cor" src="../img/tel.svg" alt=""width="70px" height="70px">  (98) 3200-0032</div>
     </main>
     
 </body>
