--- a/views/login.html
+++ b/views/login.html
@@ -30,33 +30,39 @@
         <a href="login.html">Login</a>
     </nav>
 
-    <main>
-   <div id="login"> 
-    
-    <h2>acesse sua conta</h2>
+    <main class="login-centro">
 
-    <form action="" method="post">
-<label for="email">E-MAIL:</label>
-        <input type="email" name="email" id="email" >
-        <label for="senha">SENHA:</label>
-        <input type="password" name="senha" id="senha">
+        <div id="centralizar">
 
-        <button id="botao_entrar" type="submit">ENTRAR</button>
-        
-        
-</form>
-<a href="">esqueceu sua senha?</a>
-    
-    
+            <div id="login">
 
-</div>
-<div class="crie_sua_conta"> <p>Ainda não é cadastrado?
-    </p>
-    <a href="">Crie sua conta</a>
-</div>
+                <h2>acesse sua conta</h2>
+
+                <form action="" method="post">
+                    <label for="email">E-MAIL:</label>
+                    <input type="email" name="email" id="email">
+                    <label for="senha">SENHA:</label>
+                    <input type="password" name="senha" id="senha">
+
+                    <button id="botao_entrar" type="submit">ENTRAR</button>
+
+
+                </form>
+                <a href="">esqueceu sua senha?</a>
+
+
+
+            </div>
+            <div class="crie_sua_conta">
+                <p>Ainda não é cadastrado?
+                </p>
+                <a href="">Crie sua conta</a>
+            </div>
+
+        </div>
     </main>
 
-   
+
 </body>
 
 </html>
