--- a/views/quem_somos.html
+++ b/views/quem_somos.html
@@ -30,13 +30,15 @@
         <a href="login.html">Login</a>
     </nav>
 
-    <main>
+    <main class="login-centro">
+
         <div>
             <h1 id="centro">Que somos</h1>
         </div>
 
         <div>
-            <p id="meio">Olá caros amigos, é um prazer enorme ter vocês conosco. Nesse momento queremos apresentar esse
+            <p id="meio">Olá caros amigos, é um prazer enorme ter vocês conosco. Nesse momento queremos apresentar
+                esse
                 projeto que está sendo desenvolvido pelos alunos da turma 52 do Curso de Programador Web Noturno no
                 Senac do ano de 2024 com a supervisão do Professor Luis Fellipe.</p>
         </div>
